@@ -8,6 +8,9 @@ Changes between 2.3.0 and 2.3.dev
 - skip pexpect using tests (test_pdb.py mostly) on freebsd* systems
   due to pexpect not supporting it properly (hanging)
 
+- link to web pages from --markers output which provides help for
+  pytest.mark.* usage.
+
 Changes between 2.2.4 and 2.3.0
 -----------------------------------
 
